---
title: Visitor class diagram
---
classDiagram
    class Element{
      <<interface>>
      +accept(visitor)
    }

    class Visitor{
      <<interface>>
      +visitConcreteElementA(element)
      +visitConcreteElementB(element)
    }

    Element <-- Visitor
    Element <|-- ConcreteElementA
    Element <|-- ConcreteElementB
    Visitor <|-- ConcreteVisitor1
    Visitor <|-- ConcreteVisitor2

    class ConcreteElementA{
      +accept(visitor)
      +exclusiveMethodOfConcreteElementA()
    }

    class ConcreteElementB{
      +accept(visitor)
      +specialMethodOfConcreteElementB()
    }

    class ConcreteVisitor1{
      +visitConcreteElementA(element)
      +visitConcreteElementB(element)
    }

    class ConcreteVisitor2{
      +visitConcreteElementA(element)
      +visitConcreteElementB(element)
    }
